WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62884
Assertion failure in SVGTextLayoutEngine constructor (!m_layoutAttributes.isEmpty())
https://bugs.webkit.org/show_bug.cgi?id=62884
Summary
Assertion failure in SVGTextLayoutEngine constructor (!m_layoutAttributes.isE...
Julien Chaffraix
Reported
2011-06-17 10:58:06 PDT
It looks like we can have an empty layoutAttributes in some cases. The URL has a reduced test case. Patch forthcoming.
Attachments
Proposed fix: do not layout if you don't have any layout attributes.
(3.72 KB, patch)
2011-06-17 13:00 PDT
,
Julien Chaffraix
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2011-06-17 13:00:06 PDT
Created
attachment 97641
[details]
Proposed fix: do not layout if you don't have any layout attributes.
WebKit Review Bot
Comment 2
2011-06-17 19:44:03 PDT
Comment on
attachment 97641
[details]
Proposed fix: do not layout if you don't have any layout attributes. Rejecting
attachment 97641
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-02', '--port..." exit_code: 1 Last 500 characters of output: return self.open(self.click(*args, **kwds)) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_mechanize.py", line 203, in open return self._mech_open(url, data, timeout=timeout) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_mechanize.py", line 255, in _mech_open raise response webkitpy.thirdparty.autoinstalled.mechanize._response.httperror_seek_wrapper: HTTP Error 500: Internal Server Error Full output:
http://queues.webkit.org/results/8873023
Nikolas Zimmermann
Comment 3
2011-06-17 23:39:30 PDT
Good catch, thanks Julien - generated content & SVG Text did not play well together.
Nikolas Zimmermann
Comment 4
2011-06-17 23:53:54 PDT
Oh, this was already landed manually by Julien in
r89183
. Closing bug.
Julien Chaffraix
Comment 5
2011-06-19 07:57:07 PDT
(Adding Eric as there was some hogs with the commit queue, Eric see this comment and
comment #2
for reference) (In reply to
comment #4
)
> Oh, this was already landed manually by Julien in
r89183
. Closing bug.
Good catch, thanks! However I did not land the patch. The commit queue did but got an error before closing the bug. Not sure which component returned a 500 response.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug