2011-06-17  Julien Chaffraix  <jchaffraix@webkit.org>

Reviewed by Darin Adler.

        Assertion failure in SVGTextLayoutEngine constructor (!m_layoutAttributes.isEmpty())
        https://bugs.webkit.org/show_bug.cgi?id=62884

        * svg/custom/assert-empty-layout-attributes-expected.txt: Added.
        * svg/custom/assert-empty-layout-attributes.svg: Added.
2011-06-17  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Darin Adler.

        Assertion failure in SVGTextLayoutEngine constructor (!m_layoutAttributes.isEmpty())
        https://bugs.webkit.org/show_bug.cgi?id=62884

        Test: svg/custom/assert-empty-layout-attributes.svg

        * rendering/svg/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBox::computePerCharacterLayoutInformation): Added a early return here.
        It is not needed to do the text layout algorithm if you don't have any layout information as
        your size is (0, 0) anyway.

git-svn-id: svn://svn.chromium.org/blink/trunk@89183 bbb929c8-8fbe-4397-9dbb-9b2b20218538