third_party/WebKit/Source/WebCore/rendering/svg/SVGRootInlineBox.cpp
@@ -78,6 +78,9 @@ void SVGRootInlineBox::computePerCharacterLayoutInformation()
     ASSERT(parentBlock);
 
     Vector<SVGTextLayoutAttributes>& attributes = parentBlock->layoutAttributes();
+    if (attributes.isEmpty())
+        return;
+
     if (parentBlock->needsReordering())
         reorderValueLists(attributes);
 
